fixed layout, scrollbar, connect and profile buttons

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -4,22 +4,31 @@
 /*
   Base styles
 */
-body {
-  @apply bg-collectible-medium-purple;
-}
+
 
 @keyframes pulse {
-  0%, 100% {
-    background-color: #4B5563;  /* gray-600 */
+  0%,
+  100% {
+    background-color: #4b5563; /* gray-600 */
   }
   50% {
-    background-color: #374151;  /* gray-700 */
+    background-color: #374151; /* gray-700 */
   }
 }
 
 .animate-pulse {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
+
+.custom-scrollbar {
+  @apply scrollbar-thin scrollbar-track-collectible-medium-purple scrollbar-thumb-collectible-purple-borders/30 scrollbar-track-rounded scrollbar-thumb-rounded;
+}
+
+body {
+  @apply bg-collectible-medium-purple custom-scrollbar;
+}
+
+
 
 /* When last, this ensures inline styles take priority */
 @tailwind utilities;
